--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+numpy>=1.26,<3
+pandas>=2.1,<3
+scikit-learn>=1.4,<2
+joblib>=1.3,<2
+matplotlib>=3.8,<4
+seaborn>=0.13,<1
+ipykernel>=6.29,<7
+jupyter>=1.0,<2
 
